test/asm/opt-r.err
error: Missing argument for option 'r'
    at opt-r.asm(5)
error: Invalid argument for option 'r' ("2a")
    at opt-r.asm(6)
FATAL: Recursion limit (0) exceeded
    at opt-r.asm(13)
